--- a/src/styles/components/maincontent.sass
+++ b/src/styles/components/maincontent.sass
@@ -29,6 +29,6 @@
         line-height: 1.3rem
 
     .btn
-        align-self: start
+        align-self: flex-start
         @include mixins.btn
         
