--- a/src/styles/mixins.sass
+++ b/src/styles/mixins.sass
@@ -1,7 +1,7 @@
 @use 'variables'
     
 @mixin center
-    display: flex
+    display: flexbox
     justify-content: center
     align-items: center
 
