--- a/src/styles/components/informationcontainer.sass
+++ b/src/styles/components/informationcontainer.sass
@@ -13,7 +13,7 @@
 
     .info-card
         @include mixins.center
-        justify-content: start
+        justify-content: center
         gap: 1rem
         padding-bottom: .8rem
         margin-bottom: .8rem
